# random_walk_controversy

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: github-actions-demo.yml
random_walk_controversy/: __init__.py  rwc.py
src/random_walk_controversy/: __main__.py  rwc.py
test/: test_rwc.py
