[tool.poetry]
name = "random_walk_controversy"
version = "0.1.0"
description = "Implementation of Garimella's algorithm to get the RWC score of a network"
authors = ["Gianluca Morcaldi <bendico765@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"